; ModuleID = '/home/carl/AnghaBench/h2o/deps/klib/test/extr_khash_test.c_main.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/klib/test/extr_khash_test.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@data_size = common dso_local global i32 0, align 4
@ht_khash_int = common dso_local global i32 0, align 4
@ht_khash_str = common dso_local global i32 0, align 4
@ht_khash_unpack = common dso_local global i32 0, align 4
@ht_khash_packed = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp sgt i32 %6, 1
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load i8**, i8*** %5, align 8
  %10 = getelementptr inbounds i8*, i8** %9, i64 1
  %11 = load i8*, i8** %10, align 8
  %12 = call i32 @atoi(i8* %11)
  store i32 %12, i32* @data_size, align 4
  br label %13

13:                                               ; preds = %8, %2
  %14 = call i32 (...) @ht_init_data()
  %15 = load i32, i32* @ht_khash_int, align 4
  %16 = call i32 @ht_timing(i32 %15)
  %17 = load i32, i32* @ht_khash_str, align 4
  %18 = call i32 @ht_timing(i32 %17)
  %19 = load i32, i32* @ht_khash_unpack, align 4
  %20 = call i32 @ht_timing(i32 %19)
  %21 = load i32, i32* @ht_khash_packed, align 4
  %22 = call i32 @ht_timing(i32 %21)
  %23 = call i32 (...) @ht_destroy_data()
  ret i32 0
}

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @ht_init_data(...) #1

declare dso_local i32 @ht_timing(i32) #1

declare dso_local i32 @ht_destroy_data(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
